--- a/DemoApp-CI/DemoApp-CI/App.xaml
+++ b/DemoApp-CI/DemoApp-CI/App.xaml
@@ -1,20 +1,15 @@
-﻿<Application
-    x:Class="DemoApp_CI.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DemoApp_CI">
-
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.ThemeDictionaries>
-                <ResourceDictionary x:Key="Default">
-                    <ImageBrush x:Key="HubBackgroundImageBrush" ImageSource="Assets/HubBackground.png"/>
-                </ResourceDictionary>
-                <ResourceDictionary x:Key="HighContrast">
-                    <ImageBrush x:Key="HubBackgroundImageBrush" ImageSource="{x:Null}"/>
-                </ResourceDictionary>
-            </ResourceDictionary.ThemeDictionaries>
-
+<Application x:Class="DemoApp_CI.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:DemoApp_CI" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.ThemeDictionaries>
+        <ResourceDictionary x:Key="Default">
+          <ImageBrush x:Key="HubBackgroundImageBrush" ImageSource="Assets/HubBackground.png" />
         </ResourceDictionary>
-    </Application.Resources>
+        <ResourceDictionary x:Key="HighContrast">
+          <ImageBrush x:Key="HubBackgroundImageBrush" ImageSource="{x:Null}" />
+          <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="using:DemoApp_CI.ViewModel" />
+        </ResourceDictionary>
+      </ResourceDictionary.ThemeDictionaries>
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
